<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="15dp"
    android:background="@color/white"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTime"
        android:layout_width="match_parent"
        android:layout_height="@dimen/heigth_80"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:hint="@string/entertime"
        android:inputType="text"
        android:textColor="@color/black"
        android:padding="@dimen/padding_20"
        android:autofillHints="@string/input_title" />


    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margintop_20"
        android:text="@string/submit"
        android:textColor="@color/white" />

</LinearLayout>