<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/radius_8"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_20"
            android:paddingLeft="@dimen/padding_20"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="@dimen/text_Size20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTime"
            android:paddingStart="@dimen/padding_20"
            android:paddingLeft="@dimen/padding_20"
            android:text="@string/title"
            android:textColor="@color/black" />

        <ToggleButton
            android:id="@+id/btnOnOff"
            android:layout_width="@dimen/btn_size50"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@color/black"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size10" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdate"
            android:layout_width="@dimen/btn_size50"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/btnOnOff"
            android:layout_toLeftOf="@+id/btnOnOff"
            android:background="@color/green_700"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size10" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDelete"
            android:layout_width="@dimen/btn_size50"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/btnUpdate"
            android:layout_toLeftOf="@+id/btnUpdate"
            android:background="@color/red"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size10" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
